--- a/main.css
+++ b/main.css
@@ -26,11 +26,19 @@ body {
 
 .tauntbox {
   background-color: rgba(255, 255, 255, 0.8);
-  width: 500px;
+  width: 100%;
+  min-width: 500px;
   padding: 15px;
   margin: 0;
 }
 
+.pokestatsbox {
+    background-color: rgba(255, 255, 255, 0.8);
+    width: 100%;
+    min-width: 500px;
+    padding: 15px;
+    margin: 0;
+}
 
 .trainerpic {
 display: grid;
