--- a/main.css
+++ b/main.css
@@ -1,9 +1,14 @@
 body {
   width: 100%;
+  background-image: radial-gradient(transparent, rgba(0, 0, 0, 0.7), black), url("http://3.bp.blogspot.com/-FFN0GnGuv1Q/T4ERISH9ojI/AAAAAAAABGc/o9W5fwXVRZA/s1600/water+blue+by+maceme+wallpaper.jpg");
+  background-position: fixed;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .trainer-box {
-  background-color: lavender;
+  background-color: rgba(123, 184, 162, 0.3);
   padding: 10px;
   height: 600px;
   overflow: hidden;
