I just staged these on master and switched to brian, and they are still staged. Pushing brian so it will let me pull master.

--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@ body {
   background-color: lavender;
   padding: 10px;
   height: 600px;
-  overflow: hidden;
+  /* overflow: hidden; */ /*I turned this off for taunt to diplay*/
 }
 
 
