--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@ body {
   background-attachment: fixed;
   color: white;
   font-family: 'ABeeZee', sans-serif;
+  font-weight: bold;
 }
 
 .banner {
@@ -39,24 +40,23 @@ body {
 }
 
 .tauntbox {
-  background-color: rgb(204, 223, 255, 0.7);
+  background-color: rgb(204, 223, 255, 0.3);
   padding: 15px;
   margin: 15px;
-  color: rgb(1, 21, 56);
+  color: white;
   border-radius: 15px;
   box-shadow: 4px 4px 10px black;
   width: 500px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+padding: 40px 40px 10px 40px;
 }
 
+
 .pokestatsbox {
-  background-color: rgb(204, 223, 255, 0.7);
+  background-color: rgb(204, 223, 255, 0.3);
   width: 500px;
   padding: 15px;
   margin: 0;
-  color: rgb(1, 21, 56);
+  color: white;
   border-radius: 15px;
   box-shadow: 4px 4px 10px black;
 }
@@ -80,12 +80,13 @@ body {
   font-size: 0.8em;
 }
 
+
 .trainerpic {
   display: grid;
 }
 
 .trainerpic img {
-  max-width: 400px;
+  height: 700px;
 }
 
 .hidden {
