--- a/main.css
+++ b/main.css
@@ -1,26 +1,79 @@
 body {
   width: 100%;
-  background-image: radial-gradient(transparent, rgba(0, 0, 0, 0.7), black), url("http://3.bp.blogspot.com/-FFN0GnGuv1Q/T4ERISH9ojI/AAAAAAAABGc/o9W5fwXVRZA/s1600/water+blue+by+maceme+wallpaper.jpg");
+  background-image: radial-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7), black), url("http://3.bp.blogspot.com/-FFN0GnGuv1Q/T4ERISH9ojI/AAAAAAAABGc/o9W5fwXVRZA/s1600/water+blue+by+maceme+wallpaper.jpg");
   background-attachment: fixed;
   color: white;
   font-family: 'ABeeZee', sans-serif;
   font-weight: bold;
 }
 
-.banner {
-  height: 200px;
-  background-image: url("images/gyrados-banner.png");
+.bannerbefore {
+  height: 100vh;
+  background-image: radial-gradient(transparent, rgb(0, 0, 0, 0.3), rgb(0, 0, 0, 0.9)), url("images/gyrados-banner.png");
   background-position: center;
-  opacity: 0.7;
+  background-size: cover;
+  opacity: 0.9;
   overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-shadow: 3px 3px 3px black;
+  transition-duration: 2s;
+}
+
+.bannerafter {
+  /* filter: blur(40px); */
+  height: 100px;
+  background-image: radial-gradient(transparent, rgb(0, 0, 0, 0.3), rgb(0, 0, 0, 0.9)), url("images/gyrados-banner.png");
+  background-position: center;
+  background-size: cover;
+  opacity: 0.9;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  transition-duration: 2s;
+  text-shadow: 3px 3px 3px black;
+  box-shadow: 3px 0px 3px black;
+}
+
+.bannerbutton {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  background-color: rgb(147, 172, 234, 0.9);
+  box-shadow: 7px 7px 7px black;
+  transition-duration: 1s;
+  border-color: white;
+  border-width: 5px;
+  background-image: url("https://fsmedia.imgix.net/d6/cd/bc/3e/13ca/45a3/b843/e1b151dc63ef/tumblrnn0lv3epsp1tqptlzo1540gif.gif");
+  background-position: -20px 7px;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.bannerbutton:hover {
+  background-color: rgb(147, 172, 234, 0.95);
+  box-shadow: 13px 7px 17px black;
+  transform: translateY(-9px) rotate(15deg) scale(1.2, 1.2);
+  border-color: white;
+  border-width: 2px;
+}
+
+.titlename {
+  opacity: 1 !important;
+  filter: blur(0px) !important;
 }
 
 .trainer-box {
-  background: linear-gradient(transparent, rgba(116, 139, 175, 0.7), transparent);
+  background: linear-gradient(transparent, rgba(116, 139, 175, 0.3), transparent);
   /* background-color: ); */
   padding: 10px;
   height: 800px;
-  overflow: hidden;
+  /* overflow: hidden; */
+
 }
 
 .pokeball {
@@ -28,6 +81,8 @@ body {
   width: 40px;
   transition-duration: 0.4s;
   cursor: pointer;
+  animation: bounce 1.5s;
+  animation-iteration-count: infinite;
 }
 
 .pokeballsbox {
@@ -41,24 +96,28 @@ body {
 
 .tauntbox {
   background-color: rgb(204, 223, 255, 0.3);
-  padding: 15px;
-  margin: 15px;
   color: white;
-  border-radius: 15px;
   box-shadow: 4px 4px 10px black;
   width: 500px;
-padding: 40px 40px 10px 40px;
+  margin: 20px;
+  border-top-right-radius: 20px;
+  border-bottom-left-radius: 20px
 }
 
-
-.pokestatsbox {
-  background-color: rgb(204, 223, 255, 0.3);
-  width: 500px;
-  padding: 15px;
+.tauntbox h1 {
+  height: 100%;
+  font-size: 1.4em;
+  padding: 20px;
+  background-color: rgb(50, 87, 145, 0.9);
   margin: 0;
-  color: white;
-  border-radius: 15px;
-  box-shadow: 4px 4px 10px black;
+  color:#d8e7ff;
+  display: flex;
+  align-items: center;
+  border-top-right-radius: 20px;
+}
+
+.tauntbox p {
+  padding:20px;
 }
 
 .pokeimgbox {
@@ -70,19 +129,60 @@ padding: 40px 40px 10px 40px;
   max-width: 500px;
 }
 
-.pokestatsbox h1 {
-  padding: 0 10px 0px 10px;
-  font-size: 1.2em;
+.pokestatsbox {
+  background-color: rgb(204, 223, 255, 0.3);
+  width: 500px;
+  margin: 0;
+  color: white;
+  box-shadow: 4px 4px 10px black;
+  display: grid;
+   grid-template-columns: repeat(4, 1fr);
+  grid-template-areas: 'aa bb cc dd' 'aa ee ee ee';
 }
+
+.pokestatsbox h1 {
+  height: 100%;
+  font-size: 1.3em;
+  padding: 10px;
+  background-color: rgb(50, 87, 145, 0.9);
+  margin: 0;
+  color:#d8e7ff;
+  display: flex;
+  align-items: center;
+}
+
+.aa {
+  grid-area: aa;
+}
+
+.bb {
+  grid-area: bb;
+}
+
+.cc {
+  grid-area: cc;
+}
+
+.dd {
+  grid-area: dd;
+}
+.ee {
+  grid-area: ee;
+}
+
 
 .pokestatsbox p {
-  padding: 0 10px 0px 10px;
+  padding: 10px;
+  margin:0;
   font-size: 0.8em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-
 .trainerpic {
-  display: grid;
+  position: relative;
+  top: -50px;
 }
 
 .trainerpic img {
@@ -95,15 +195,14 @@ padding: 40px 40px 10px 40px;
   transition-duration: 2s;
 }
 
+.hidden2 {
+  display: none;
+}
+
 .revealed {
   transition: opacity;
   transition-duration: 2s;
   opacity: 1;
-}
-
-.pokeball {
-  animation: bounce 1.5s;
-  animation-iteration-count: infinite;
 }
 
 @keyframes bounce {
@@ -185,7 +284,7 @@ padding: 40px 40px 10px 40px;
 
 .pokeball:hover {
   animation: initial;
-  transform: translateY(1px) rotate(45deg) scale(1.3, 1.3);
+  transform: translateY(-5px) rotate(45deg) scale(1.3, 1.3);
 }
 
 .pokestatsbox:hover {
