--- a/main.css
+++ b/main.css
@@ -93,9 +93,10 @@ body {
   justify-content: space-around;
   padding-left: 50px;
   padding-right: 50px;
-  background-image: url("https://maxcdn.icons8.com/Share/icon/ultraviolet/Editing/horizontal_line1600.png");
-  background-size: cover;
-  background-position: center;
+  background-image: url("https://s3-us-west-2.amazonaws.com/tandfbis/rt-files/Images/horizontal_line.png");
+  background-size: 500px auto;
+  background-repeat: no-repeat;
+  background-position: 0% 65%;
 }
 
 .tauntbox {
