--- a/main.css
+++ b/main.css
@@ -23,6 +23,9 @@ body {
   text-shadow: 3px 3px 3px black;
   transition-duration: 2s;
   font-family: 'Trade Winds';
+  border-style: solid;
+  border-width: 1px;
+  border-color: rgb(255, 255, 255, 0.7);
 }
 
 .bannerafter {
@@ -41,6 +44,9 @@ body {
   text-shadow: 3px 3px 3px black;
   box-shadow: 3px 0px 3px black;
   font-family: 'Trade Winds';
+  border-style: solid;
+  border-width: 0 5px 5px 5px;
+  border-color: rgb(255, 255, 255, 0.8);
 }
 
 .bannerbutton {
@@ -108,6 +114,9 @@ body {
   border-top-right-radius: 20px;
   border-bottom-left-radius: 20px;
   font-family: 'Tillana', cursive;
+  border-style: solid;
+  border-width: 5px;
+  border-color: rgb(255, 255, 255, 0.8);
 }
 
 .tauntbox h1 {
@@ -154,6 +163,9 @@ body {
   font-family: 'Tillana', cursive;
   font-size: 1.2em;
   font-weight: bold;
+  border-style: solid;
+  border-width: 5px;
+  border-color: rgb(255, 255, 255, 0.8);
 }
 
 .pokestatsbox h1 {
