--- a/main.css
+++ b/main.css
@@ -24,7 +24,7 @@ body {
   transition-duration: 2s;
   font-family: 'Trade Winds';
   border-style: solid;
-  border-width: 1px;
+  border-width: 0px;
   border-color: rgb(255, 255, 255, 0.7);
 }
 
@@ -45,7 +45,7 @@ body {
   box-shadow: 3px 0px 3px black;
   font-family: 'Trade Winds';
   border-style: solid;
-  border-width: 0 5px 5px 5px;
+  border-width: 5px 5px 5px;
   border-color: rgb(255, 255, 255, 0.8);
 }
 
