--- a/main.css
+++ b/main.css
@@ -117,6 +117,8 @@ body {
   border-style: solid;
   border-width: 5px;
   border-color: rgb(255, 255, 255, 0.8);
+  position: relative;
+  left: 50px;
 }
 
 .tauntbox h1 {
